force-app/main/default/objects/Payment_Detail__c/fields/Additional_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Additional_Remarks__c</fullName>
    <label>Additional Remarks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>