force-app/main/default/objects/Payment_Detail__c/fields/Payment_Done__c.field-meta.xml
<CustomField>
    <fullName>Payment_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Done</label>
    <type>Checkbox</type>
</CustomField>