force-app/main/default/objects/Payment_Detail__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>