force-app/main/default/objects/Payment_Detail__c/fields/Refunded__c.field-meta.xml
<CustomField>
    <fullName>Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refunded</label>
    <type>Checkbox</type>
</CustomField>