force-app/main/default/objects/Payment_Detail__c/fields/Total_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Amount__c</fullName>
    <formula>Opportunity__r.Total_Net_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>