force-app/main/default/objects/Payment_Detail__c/validationRules/Refund_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_VR</fullName>
    <active>true</active>
    <errorConditionFormula>Refunded__c ==  true

 &amp;&amp; 


 ISBLANK(Refund_Reason__c )</errorConditionFormula>
    <errorDisplayField>Refund_Reason__c</errorDisplayField>
    <errorMessage>If refunded , the reason should be entered</errorMessage>
</ValidationRule>